# mcp-server

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mallorymcp/: __init__.py  app.py
src/mallorymcp/config/: __init__.py  settings.py
src/mallorymcp/decorator/: api.py
src/mallorymcp/server/: server.py
src/mallorymcp/tools/: advisories.py  attack_patterns.py  breaches.py  exploits.py  malware.py  mentions.py  organizations.py  products.py  search.py  sources.py  stories.py  threat_actors.py  vulnerabilities.py
src/mallorymcp/utils/: debug.py  serialize.py
tests/: test_smoke.py
