[project]
name = "mallory-mcp-server"
version = "0.2.0"
description = "MalloryAI Intelligence MCP Server"
authors = [
    { name = "Mallory Team", email = "hello@mallory.ai" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "malloryapi>=0.1.1",
    "mcp[cli]>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/malloryai/mallory-mcp-server"
Documentation = "https://github.com/malloryai/mallory-mcp-server#readme"
Repository = "https://github.com/malloryai/mallory-mcp-server.git"
Issues = "https://github.com/malloryai/mallory-mcp-server/issues"

[project.optional-dependencies]
lint = [
    "ruff>=0.8",
]
tools = [
    "pre-commit>=4.1.0",
]

[project.scripts]
mallory-mcp-server = "mallory.mcp.app:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = ["mallory", "mallory.mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
